--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,34 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+:root.theme-light {
+  --themes-main-color: #000;
+  --themes-background: #FFF;
+  --themes-background__gradient: repeating-linear-gradient(#d3d3d3 0 2px, transparent 2px 4px),
+                                 repeating-linear-gradient(90deg, #d3d3d3 0 2px, transparent 2px 4px),
+                                 linear-gradient(180deg, #E7E7E7 0%, #1A1A1A 100%);
+  --main-title__weight: 700;
+  --main-text__weight: 400;
+}
+
+:root.theme-dark {
+  --themes-main-color: #00CC14;
+  --themes-background: #000;
+  --themes-background__gradient: repeating-linear-gradient(#000 0 2px, transparent 2px 4px),
+                                 repeating-linear-gradient(90deg, #000 0 2px, transparent 2px 4px),
+                                 linear-gradient(180deg, #007f0c 0%, #004306 100%);
+  --main-title__weight: 785;
+  --main-text__weight: 465;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --themes-main-color: #00CC14;
+    --themes-background: #000;
+    --themes-background__gradient: repeating-linear-gradient(#000 0 2px, transparent 2px 4px),
+                                   repeating-linear-gradient(90deg, #000 0 2px, transparent 2px 4px),
+                                   linear-gradient(180deg, #007f0c 0%, #004306 100%);
+    --main-title__weight: 785;
+    --main-text__weight: 465;
+  }
+}
