--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,12 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --main-font__family: 'Inter-Variable';
+  --accent-font__family: 'Press-Start-2P';
+  --themes-main-color: #000;
+  --themes-background: #FFF;
+  --themes-background__gradient: repeating-linear-gradient(#000 0 2px, transparent 2px 4px),
+                                 repeating-linear-gradient(90deg, #000 0 2px, transparent 2px 4px),
+                                 linear-gradient(180deg, #E7E7E7 0%, #1A1A1A 100%);
+  --main-title__weight: 700;
+  --main-text__weight: 400;
+}
