--- a/styles/style.css
+++ b/styles/style.css
@@ -56,23 +56,58 @@
 }
 
 .theme-menu__item:not(:last-of-type){
-  padding-bottom: 11px;
+  padding-bottom: 14px;
 }
 
 .theme-menu__button {
+  position: relative;
   border: none;
+  padding: 0;
+  opacity: 1;
   text-transform: uppercase;
   background: transparent;
+  transition: opacity 0.3s ease;
+  cursor: pointer;
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+}
+
+.theme-menu__button:focus-visible {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  margin-top: 16px;
+  margin-left: -100%;
+  border-bottom: 2px solid var(--themes-main-color);
+  transition: transform .5s ease;
+  transform: scaleX(0);
+  transform-origin: left;
+}
+.theme-menu__button:focus-visible::after {
+  transform: scaleX(1);
 }
 
 .theme-menu__button:disabled {
   opacity: 0.6;
+  pointer-events: none;
 }
 
-.theme-menu__item .theme-menu__button:disabled::before {
+.theme-menu__button:disabled::before {
   content: '▶';
   position: absolute;
   margin-left: -19px;
+  animation: 1s ease-in-out infinite both arrow;
 }
 
 .card {
@@ -86,15 +121,21 @@
   background-color: var(--themes-background);
 }
 
+.card:not(:last-of-type) {
+  margin-bottom: 54px;
+}
+
 .card-title {
+  align-self: self-start;
   padding: 5px 10px;
   font-weight: var(--main-title__weight);
   font-size: 18px;
 }
 
 .card-picture {
-  width: 100vw;
-  height: 100vw;
+  position: relative;
+  width: min(100vw, 696px);
+  height: min(100vw, 696px);
   border: 2px solid var(--themes-main-color);
 }
 
@@ -105,8 +146,32 @@
   object-position: right;
 }
 
+.watermark {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 23px 11px 0 0;
+  opacity: 0.5;
+  font-family: var(--accent-font__family);
+  font-size: 14px;
+  text-shadow: -1px 0 var(--themes-background), 
+                0 1px var(--themes-background), 
+                1px 0 var(--themes-background), 
+                0 -1px var(--themes-background);
+  mix-blend-mode: hard-light;
+  z-index: 1;
+}
+
+@supports((text-stroke: 1px #000000) or (-webkit-text-stroke: 1px #000000)) {
+  .watermark {
+      text-shadow: none;
+      -webkit-text-stroke: 1px var(--themes-background);
+      text-stroke: 1px var(--themes-background);
+  }
+}
+
 .card-text {
-  padding: 25px 25px 0;
+  padding: 27px 25px 0;
   font-weight: var(--main-text__weight);
   font-size: 18px;
 }
@@ -114,53 +179,388 @@
 .button-list{
   display: flex;
   justify-content: end;
+  align-items: center;
+  gap: 5px;
   padding: 25px;
+}
+
+.button-list__item {
+  display: flex;
+  align-items: center;
 }
 
 .card-button {
   border: none;
   background-color: transparent;
+  cursor: pointer;
+}
+
+.card__icon-button {
+  width: 39px;
+  height: 36px;
+  padding: 0;
+  outline-color: transparent;
+  transition: outline-color .3s ease;
+}
+
+.card__icon-button:focus{
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  outline: 2px solid var(--themes-main-color);
+  outline-color: var(--themes-main-color);
+}
+
+.like-icon .core,
+.like-icon .main-body {
+  fill: transparent;
+}
+
+.like-icon:hover .core {
+  fill: var(--icon-contour);
+  transition: fill .3s linear;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--icon-contour);
+  transition: fill .3s .05s linear;
+}
+
+.like-icon:active .core {
+  fill: var(--icon-main-color);
+  transition: fill .3s linear;
+}
+
+.like-icon:active .main-body {
+  fill: var(--icon-main-color);
+  transition: fill .3s .05s linear;
+}
+
+.like-icon.is-liked {
+  animation: click .3s .1s ease-in;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--icon-main-color);
+  transition: fill .3s linear;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--icon-main-color);
+  transition: fill .3s .05s linear;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--icon-main-color);
+  transition: fill .3s .06s linear;
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks .3s .2s ease-in;
+}
+
+.like-icon .contour {
+  fill: var(--icon-contour);
+  transition: fill .1s linear;
+}
+
+.like-icon .main-body {
+  fill: transparent;
+  transition: fill .3s linear;
+}
+
+.like-icon .core {
+  fill: transparent;
+  transition: fill .3s .03s linear;
+}
+
+.sparks {
+  opacity: 0;
 }
 
 .card__like-button {
+  position: relative;
   border: 2px solid var(--themes-main-color);
-  padding: 10px 36px;
-  line-height: 90%;
+  padding: 8px 36px;
+  box-shadow: none;
+  transition: box-shadow 0.3s ease;
 }
 
-.button-list__item {
+.card__like-button:focus {
+  outline: none;
+}
+
+.card__like-button:focus-visible {
+  box-shadow: 2px 2px 0 0 var(--themes-main-color);
+  outline: none;
+}
+
+.card__like-button::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin-top: -8px;
+  margin-left: -36px;
+  background-color: var(--themes-main-color);
+  transition: transform .5s ease-in-out;
+  transform: scaleX(0);
+  transform-origin: left;
+}
+
+.card__like-button:hover::before {
+  transform: scaleX(1);
+}
+
+.button__text {
+  color: var(--themes-button-color);
   font-family: var(--accent-font__family), sans-serif;
   font-size: 14px;
+  line-height: 90%;
   background-color: transparent;
+  mix-blend-mode: difference;
 }
 
 .footer {
   display: flex;
   justify-content: center;
-  padding: 54px 0 102px 0;
-  font-family: var(--accent-font__family), sans-serif;
-  font-size: 14px;
-  line-height: 90%;
-  background-color: var(--themes-background);
+  padding: 48px 0 102px 0;
 }
 
-.footer-button {
+.footer__button {
+  position: relative;
   display: flex;
-  padding: 15px 20px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 8px;
-  background-color: transparent;
   border: 2px solid var(--themes-main-color);
+  padding: 15px 20px;
+  box-shadow: none;
+  background-color: transparent;
+  transition: box-shadow 0.3s ease;
+  cursor: pointer;
+  background-color: var(--themes-background);
 }
 
-.footer-button__floppy {
+.footer__button:focus {
+  outline: none;
+}
+
+.footer__button:focus-visible {
+  box-shadow: 2px 2px 0 0 var(--themes-main-color);
+  outline: none;
+}
+
+.footer__button::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--themes-main-color);
+  transition: transform .5s ease-in-out;
+  transform: scaleX(0);
+  transform-origin: left;
+}
+
+.footer__button:hover::before {
+  transform: scaleX(1);
+}
+
+.footer__button svg {
+  mix-blend-mode: difference;
+}
+
+#floppy g {
+  fill:var(--themes-button-color);
+}
+
+.footer__button-floppy {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-svg g {
-  fill: var(--themes-main-color);
+#footer__dialog[open] {
+  position: fixed;
+  inset: 0;
+  display: grid;
+  gap: 30px;
+  width: min(clamp(21.3125rem, 20.9604rem + 1.5023vw, 22.3125rem), 357px) ;
+  border: 2px solid var(--themes-main-color);
+  padding: 30px 40px;
+  background: var(--themes-background);
+}
+
+#footer__dialog::backdrop {
+  background-color: rgba(0 0 0 / 0.7);
+}
+
+.footer__dialog-content {
+  display: grid;
+  align-items: center;
+  gap: 20px;
+}
+
+.footer__dialog-content svg {
+  grid-row: 1;
+}
+
+.footer__dialog-floppy {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.footer__dialog-text {
+  grid-row: -1;
+  color: var(--themes-main-color);
+  font-family: var(--accent-font__family), sans-serif;
+  font-size: 14px;
+  line-height: 150%;
+  text-transform: uppercase;
+  background-color: transparent;
+}
+
+.footer__dialog-button {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid var(--themes-main-color);
+  padding: 9px 17px;
+  box-shadow: none;
+  background-color: transparent;
+  transition: box-shadow 0.3s ease;
+  cursor: pointer;
+}
+
+.footer__dialog-button:focus {
+  outline: none;
+}
+
+.footer__dialog-button:focus-visible {
+  box-shadow: 2px 2px 0 0 var(--themes-main-color);
+  outline: none;
+}
+
+.footer__dialog-button::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--themes-main-color);
+  transition: transform .5s ease-in-out;
+  transform: scaleX(0);
+  transform-origin: left;
+}
+
+.footer__dialog-button:hover::before {
+  transform: scaleX(1);
+}
+
+.fliter-grayscale {
+  filter: grayscale(50%);
+}
+
+.filter-contrast {
+  filter: contrast(200%);
+}
+
+.filter-brightness {
+  filter: brightness(200%);
+}
+
+.filter-invert {
+  filter: invert(80%);
+}
+
+.filter-sepia {
+  filter: sepia(90%);
+}
+
+.fliter-blur {
+  filter: blur(5px);
+}
+
+.filter-hue__rotate-opacity {
+  filter: hue-rotate(90deg) opacity(70%);
+}
+
+@media (width > 375px) {
+  .header {
+    width: min(100vw, 696px);
+    margin: 100px auto;
+  }
+
+  .card {
+    width: min(100vw, 696px);
+    margin: auto;
+  }
+
+  .card-picture {
+    width: min(100vw, 696px);
+    height: min(100vw, 696px);
+  }
+
+  .footer {
+    width: min(100vw, 696px);
+    margin: auto;
+  }
+
+  .footer__button {
+    flex-direction: row;
+    padding: 15px 19px;
+  }
+
+  .footer__button svg {
+    scale: 0.75;
+  }
+
+  #footer__dialog[open] {
+    padding: 30px;
+  }
+}
+
+@keyframes arrow {
+  from {
+    translate: 0;
+  }
+
+  50% {
+    translate: 2px;
+  }
+
+  to {
+    translate: 0;
+  }
+}
+
+@keyframes click{
+  from {
+    scale: 1;
+  }
+
+  50% {
+    scale: 1.5;
+  }
+
+  to {
+    scale: 1;
+  }
+}
+
+@keyframes sparks {
+  from {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
 }
