--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,11 +2,14 @@
 :root {
   --main-font__family: 'Inter-Variable';
   --accent-font__family: 'Press-Start-2P';
+  --main-title__weight: 700;
+  --main-text__weight: 400;
   --themes-main-color: #000;
+  --themes-button-color: #FFF;
   --themes-background: #FFF;
   --themes-background__gradient: repeating-linear-gradient(#000 0 2px, transparent 2px 4px),
                                  repeating-linear-gradient(90deg, #000 0 2px, transparent 2px 4px),
                                  linear-gradient(180deg, #E7E7E7 0%, #1A1A1A 100%);
-  --main-title__weight: 700;
-  --main-text__weight: 400;
+  --icon-contour: #000;
+  --icon-main-color: #FF0000;
 }
