--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,111 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+.like-icon .core,
+.like-icon .main-body {
+  fill: transparent;
+}
+
+.like-icon:hover .core {
+  fill: var(--icon-contour);
+  transition: fill .3s linear;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--icon-contour);
+  transition: fill .3s .05s linear;
+}
+
+.like-icon:active .core {
+  fill: var(--icon-main-color);
+  transition: fill .3s linear;
+}
+
+.like-icon:active .main-body {
+  fill: var(--icon-main-color);
+  transition: fill .3s .05s linear;
+}
+
+.like-icon.is-liked {
+  animation: click .3s .1s ease-in;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--icon-main-color);
+  transition: fill .3s linear;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--icon-main-color);
+  transition: fill .3s .05s linear;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--icon-main-color);
+  transition: fill .3s .06s linear;
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks .3s .2s ease-in;
+}
+
+.like-icon .contour {
+  fill: var(--icon-contour);
+  transition: fill .1s linear;
+}
+
+.like-icon .main-body {
+  fill: transparent;
+  transition: fill .3s linear;
+}
+
+.like-icon .core {
+  fill: transparent;
+  transition: fill .3s .03s linear;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+@keyframes arrow {
+  from {
+    translate: 0;
+  }
+
+  50% {
+    translate: 2px;
+  }
+
+  to {
+    translate: 0;
+  }
+}
+
+@keyframes click{
+  from {
+    scale: 1;
+  }
+
+  50% {
+    scale: 1.5;
+  }
+
+  to {
+    scale: 1;
+  }
+}
+
+@keyframes sparks {
+  from {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
