--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,7 @@
   background-image: var(--themes-background__gradient);
   background-size: cover;
   background-attachment: fixed;
+  font-variation-settings: var(--main-title__weight);
   min-inline-size: 320px;
   min-block-size: 100dvb;
 }
@@ -76,11 +77,11 @@
 
 .theme-menu__button:focus {
   outline: none;
+  opacity: 0.6;
 }
 
 .theme-menu__button:focus-visible {
   outline: none;
-  opacity: 0.6;
 }
 
 .theme-menu__button::after {
@@ -128,8 +129,8 @@
 .card-title {
   align-self: self-start;
   padding: 5px 10px;
-  font-weight: var(--main-title__weight);
   font-size: 18px;
+  font-variation-settings: var(--main-title__weight);
 }
 
 .card-picture {
@@ -150,6 +151,7 @@
   position: absolute;
   top: 0;
   right: 0;
+  z-index: 1;
   margin: 23px 11px 0 0;
   opacity: 0.5;
   font-family: var(--accent-font__family);
@@ -159,7 +161,6 @@
                 1px 0 var(--themes-background), 
                 0 -1px var(--themes-background);
   mix-blend-mode: hard-light;
-  z-index: 1;
 }
 
 @supports((text-stroke: 1px #000000) or (-webkit-text-stroke: 1px #000000)) {
@@ -172,8 +173,8 @@
 
 .card-text {
   padding: 27px 25px 0;
-  font-weight: var(--main-text__weight);
   font-size: 18px;
+  font-variation-settings: var(--main-text__weight);
 }
 
 .button-list{
@@ -210,73 +211,6 @@
 .card__icon-button:focus-visible {
   outline: 2px solid var(--themes-main-color);
   outline-color: var(--themes-main-color);
-}
-
-.like-icon .core,
-.like-icon .main-body {
-  fill: transparent;
-}
-
-.like-icon:hover .core {
-  fill: var(--icon-contour);
-  transition: fill .3s linear;
-}
-
-.like-icon:hover .main-body {
-  fill: var(--icon-contour);
-  transition: fill .3s .05s linear;
-}
-
-.like-icon:active .core {
-  fill: var(--icon-main-color);
-  transition: fill .3s linear;
-}
-
-.like-icon:active .main-body {
-  fill: var(--icon-main-color);
-  transition: fill .3s .05s linear;
-}
-
-.like-icon.is-liked {
-  animation: click .3s .1s ease-in;
-}
-
-.like-icon.is-liked .core {
-  fill: var(--icon-main-color);
-  transition: fill .3s linear;
-}
-
-.like-icon.is-liked .main-body {
-  fill: var(--icon-main-color);
-  transition: fill .3s .05s linear;
-}
-
-.like-icon.is-liked .contour {
-  fill: var(--icon-main-color);
-  transition: fill .3s .06s linear;
-}
-
-.like-icon.is-liked .sparks {
-  animation: sparks .3s .2s ease-in;
-}
-
-.like-icon .contour {
-  fill: var(--icon-contour);
-  transition: fill .1s linear;
-}
-
-.like-icon .main-body {
-  fill: transparent;
-  transition: fill .3s linear;
-}
-
-.like-icon .core {
-  fill: transparent;
-  transition: fill .3s .03s linear;
-}
-
-.sparks {
-  opacity: 0;
 }
 
 .card__like-button {
@@ -339,9 +273,9 @@
   padding: 15px 20px;
   box-shadow: none;
   background-color: transparent;
+  background-color: var(--themes-background);
   transition: box-shadow 0.3s ease;
   cursor: pointer;
-  background-color: var(--themes-background);
 }
 
 .footer__button:focus {
@@ -369,6 +303,8 @@
 }
 
 .footer__button svg {
+  width: 28px;
+  height: 28px;
   mix-blend-mode: difference;
 }
 
@@ -405,6 +341,7 @@
 
 .footer__dialog-content svg {
   grid-row: 1;
+  mix-blend-mode: difference;
 }
 
 .footer__dialog-floppy {
@@ -428,6 +365,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
   border: 2px solid var(--themes-main-color);
   padding: 9px 17px;
   box-shadow: none;
@@ -504,6 +443,10 @@
     height: min(100vw, 696px);
   }
 
+  .watermark {
+    margin: 25px 25px 0 0;
+  }
+
   .footer {
     width: min(100vw, 696px);
     margin: auto;
@@ -520,47 +463,5 @@
 
   #footer__dialog[open] {
     padding: 30px;
-  }
-}
-
-@keyframes arrow {
-  from {
-    translate: 0;
-  }
-
-  50% {
-    translate: 2px;
-  }
-
-  to {
-    translate: 0;
-  }
-}
-
-@keyframes click{
-  from {
-    scale: 1;
-  }
-
-  50% {
-    scale: 1.5;
-  }
-
-  to {
-    scale: 1;
-  }
-}
-
-@keyframes sparks {
-  from {
-    opacity: 0;
-  }
-
-  50% {
-    opacity: 1;
-  }
-
-  to {
-    opacity: 0;
   }
 }
