--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,7 +1,7 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
 :root {
-  --main-font__family: 'Inter-Variable';
-  --accent-font__family: 'Press-Start-2P';
+  --main-font__family: 'Inter-Variable', sans-serif;
+  --accent-font__family: 'Press-Start-2P', fantasy;
   --main-title__weight: 700;
   --main-text__weight: 400;
   --themes-main-color: #000;
